@startuml Class Diagram - Naive Bayes Classification System
title Class Diagram - Naive Bayes Classification System

' === MAIN CLASSES ===
class Admin {
  -id: string
  -username: string
  -password: string
  +login(): boolean
  +logout(): void
}

class Model {
  -id: string
  -modelName: string
  -targetColumn: string
  -featureColumns: string[]
  -classes: string[]
  -accuracy: number
  -modelData: string
  -encodersData: string
  -labelEncoderData: string
  -createdAt: Date
  -updatedAt: Date
  +trainModel(): void
  +predict(data: any): string
}

class Classification {
  -id: string
  -modelId: string
  -data: string
  -predictedClass: string
  -actualClass: string
  -confidence: number
  -createdAt: Date
}

class ModelMetrics {
  -id: string
  -modelId: string
  -accuracy: number
  -precision: number
  -recall: number
  -f1Score: number
  -classMetrics: Record<string, any>
  -confusionMatrix: number[][]
  -createdAt: Date
}

class DatasetRecord {
  -id: string
  -recordId: string
  -fileName: string
  -datasetType: string
  -rawData: Record<string, any>
  -columns: string[]
  -createdAt: Date
  -updatedAt: Date
  +uploadFile(): boolean
  +validateFormat(): boolean
}

class ClassificationHistory {
  -id: string
  -fileName: string
  -modelName: string
  -totalRecords: number
  -accuracy: number
  -results: string
  -createdAt: Date
  +saveResults(): void
  +viewDetails(): any
}

class Reports {
  -id: string
  -reportType: string
  -title: string
  -description: string
  -generatedAt: Date
  -format: string
  +generateModelPerformance(): any
  +generateClassificationResults(): any
  +generateDatasetAnalysis(): any
  +generateSystemSummary(): any
  +exportToPDF(): boolean
}

' === RELATIONSHIPS ===
' Legend:
' ||--||  : One-to-One
' ||--o{  : One-to-Many 
' }o--||  : Many-to-One
' }o--o{  : Many-to-Many
' ||--|>  : Inheritance/Extends
' ||..>   : Implements/Uses
' ||--*   : Composition (strong)
' ||--o   : Aggregation (weak)

' Admin relationships
Admin ||--o{ Model : "1 manages 0..*"
Admin ||--o{ DatasetRecord : "1 uploads 0..*"
Admin ||--o{ ClassificationHistory : "1 views 0..*"
Admin ||--o{ Reports : "1 accesses 0..*"

' Model relationships (core entity)
Model ||--o{ Classification : "1 produces 0..*"
Model ||--|| ModelMetrics : "1 has 1"
Model ||--o{ ClassificationHistory : "1 recorded in 0..*"

' Classification relationships
Classification }o--|| Model : "0..* belongs to 1"
Classification ||--o Reports : "0..* reported in 0..*"

' ModelMetrics relationships
ModelMetrics }o--|| Model : "1 belongs to 1"

' Reports relationships (aggregation)
Reports o--o{ Model : "0..* analyzes 0..*"
Reports o--o{ Classification : "0..* includes 0..*"
Reports o--o{ DatasetRecord : "0..* analyzes 0..*"
Reports o--o{ ClassificationHistory : "0..* summarizes 0..*"

@enduml
